--- a/techstack.css
+++ b/techstack.css
@@ -188,7 +188,7 @@ div.logo {
   line-height: 1.2;
   color: white;
   font-weight: 700;
-  font-family: "Cormorant Garamond", serif;
+  font-family: "Finger Paint", sans-serif;
   margin-bottom: 1.5rem;
 }
 
